--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -1,3 +1,24 @@
 // Place all the styles related to the Products controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+body {
+  margin: 20px;
+}
+
+.border_left {
+  border-left: solid;
+  padding-left: 5px;
+}
+
+.border_right {
+  border-right: solid;
+  padding-right: 5px;
+  text-align: right;
+}
+h1 {
+  font-size: 50px;
+  text-align: center;
+}
+h2, img {
+  width: 250px;
+}
