REST, more boot strap

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,4 +1,4 @@
-
+<a href="/products/new" class="btn btn-primary"> Create Recipe</a>
 <div>
   <h2><% @products.each do |product| %></h2>
     <h2 class=border_left> <a href="/products/<%= product.id %>"><%= product.product_type %></a> </h2>
