hitting my head against the table...did a lot of sql stuff

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,10 +1,12 @@
-<a href="/products/new" class="btn btn-primary"> Create Recipe</a>
-<div>
-  <h2><% @products.each do |product| %></h2>
-    <h2 class=border_left> <a href="/products/<%= product.id %>"><%= product.product_type %></a> </h2>
-    <img src= "<%= product.image %>" class="img-thumbnail">
-    <h2>$<%= product.price %></h2>
-    <h2 class=border_right><%= product.description %></h2>
-    <br>
+ <div class="row">
+    <% @products.each do |product| %>
+    <div class="col-md-4 col-sm-6 product-index-single">
+      <div class="well">
+        <h2 class=border_left> <a href="/products/<%= product.id %>"><%= product.product_type %></a> </h2>
+        <img src= "<%= product.image %>" class="img-thumbnail">
+        <h2>$<%= product.price %></h2>
+        <h2 class=border_right><%= product.description %></h2>
+      </div>
+    </div>
   <% end %>
-<div>
+</div>
