--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -2,9 +2,17 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 body {
-  margin: 20px;
+  font-family: "Big Caslon","Book Antiqua","Palatino Linotype",Georgia,serif;
+  background-image: url('ep_naturalwhite.png');
 }
 
+img {
+  width: 100%;
+}
+
+.product-index-single {
+  height: 750px;
+}
 .border_left {
   border-left: solid;
   padding-left: 5px;
@@ -19,6 +27,18 @@ h1 {
   font-size: 50px;
   text-align: center;
 }
-h2, img {
-  width: 250px;
+
+span {
+  color:red;
 }
+
+.form_style {
+  text-align: left;
+}
+
+.red-price {
+  color: red;
+}
+// h2, img {
+//   width: 250px;
+// }
