--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,17 +1,19 @@
-<%= form_tag "/products/create", method: :post do %>
-  <div>
-    Product: <input type="text" name="product_type">
-  </div>
-  <div>
-    Image: <input type="text" name="image">
-  </div>
-  <div>
-    Price: <input type="text" name="price">
-  </div>
-  <div>
-    Description: <input type="text" name="description">
-  </div>
-  <div>
-    <input type="submit" value="New Product">
-  </div>
-<% end %>
+ <div class="form_style" >
+  <%= form_tag "/products/create", method: :post do %>
+    <div>
+      Product:<br> <input type="text" name="product_type">
+    </div>
+    <div>
+      Image:<br> <input type="text" name="image">
+    </div>
+    <div>
+      Price: <br><input type="text" name="price">
+    </div>
+    <div>
+      Description: <br><input type="text" name="description">
+    </div>
+    <div>
+      <input type="submit" value="New Product">
+    </div>
+  <% end %>
+</div>
