--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
             <li class="active"><a href="/products/new">New Product <span class="sr-only">(current)</span></a></li>
-            <li><a href="#">Link</a></li>
+            <li><a href="#"><%= current_user && current_user.name %></a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
               <ul class="dropdown-menu">
@@ -36,7 +36,13 @@
                 <li role="separator" class="divider"></li>
                 <li><a href="/products?disc=50">Discounted Items</a></li>
                 <li role="separator" class="divider"></li>
-                <li><a href="#">One more separated link</a></li>
+                <% if current_user %>
+                  <li><a href="/logout">Logout!</a></li>
+                <% else  %>
+                  <li><a href="/signup">Sign Up!</a></li>
+                  <li><a href="/login">Login!</a></li>
+                <% end %>
+                
               </ul>
             </li>
           </ul>
