--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -16,6 +16,10 @@
 <h6>Supplier: <%= @product.supplier.name %></h6>
 <%= link_to "Delete Product", "/products/#{ @product.id }", method: :delete, class: "btn btn-danger"%>
 <%= link_to "Edit Product", "/products/#{@product.id}/edit", method: :get, class: "btn btn-primary" %>
+<h2>Categories:</h2>
+<% @product.categories.each do |category|%>
+  <h4><%= category.name %></h2>
+<% end %>
 
 <%= form_tag '/orders', method: :post %>
   <div>
