--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -21,7 +21,7 @@
   <h4><%= category.name %></h2>
 <% end %>
 
-<%= form_tag '/orders', method: :post %>
+<%= form_tag '/carted_products', method: :post %>
   <div>
     Product_id: <input type="text" name="product_id">
   </div>
