--- a/app/views/carted_products/index.html.erb
+++ b/app/views/carted_products/index.html.erb
@@ -1,5 +1,7 @@
 <h1>Checkout Page</h1>
 
 <%= @carted_products.each do |carted_product| %>
-  <h2><%= carted_product.product.name %> -Quantity <%= carted_product.quantity %></h2>
+  <h2><%= carted_product.product.product_type %> -Quantity <%= carted_product.quantity %></h2>
 <% end %> 
+
+<%= link_to "Buy Now", "/orders", method: :post class="btn btn-primary" %>
