--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,6 +1,15 @@
 <h1>Order confirmed!</h1>
 
-<h1>User ID: <%= @order.user_id %></h1>
+<h1>User ID: <%= @order.id %></h1>
 <h1>Quantity: <%= @order.quantity %></h1>
 
+<%= @order.carted_products.each do |carted_product| %>
+  <h2>Product: <%= @carted_product.product.product_type %></h2>
+  <h2>Quantity: <%= @carted_product.quantity %></h2>
+  <h2>Product Price: <%= number_to_currency(@carted_product.product.price %></h2>
+<% end %>
+
+<h2>Subtotal: <%= number_to_currency(@order.subtotal) %></h2>
+<h2>Tax: <%= number_to_currency(@order.tax) %></h2>
+<h2>total: <%= number_to_currency(@order.total) %></h2>
 
