seeds for heroku and background images

--- a/app/assets/stylesheets/products.scss.erb
+++ b/app/assets/stylesheets/products.scss.erb
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 body {
   font-family: "Big Caslon","Book Antiqua","Palatino Linotype",Georgia,serif;
-  background-image: url('ep_naturalwhite.png');
+  background-image: url("<%= asset_path('ep_naturalwhite.png') %>");
 }
 
 img {
